--- a/index.html
+++ b/index.html
@@ -12,30 +12,34 @@
 <body>
    
     <div class="conteiner">
-        <div class="visor"> </div>
+        <div class="visor"><p></p></div>
+        <div class="row 0">
+            <button class="btn-double c" onclick="limpa()" type="button">c</button>
+            <button class="btn" onclick="clicked()" type="button"><</button>
+            <button class="btn" onclick="resultado()" type="button">=</button>
+        </div>
         <div class="row 1">
-            <button type="button">7</button>
-            <button type="button">8</button>
-            <button type="button">9</button>
-            <button type="button">÷</button>
+            <button class="btn" onclick="clicked(7)" type="button">7</button>
+            <button class="btn" onclick="clicked(8)" type="button">8</button>
+            <button class="btn" onclick="clicked(9)" type="button">9</button>
+            <button class="btn" onclick="clicked('/')" type="button">÷</button>
         </div>
         <div class="row 2">
-            <button type="button">4</button>
-            <button type="button">5</button>
-            <button type="button">6</button>
-            <button type="button">x</button>
+            <button class="btn" onclick="clicked(4)" type="button">4</button>
+            <button class="btn" onclick="clicked(5)" type="button">5</button>
+            <button class="btn" onclick="clicked(6)" type="button">6</button>
+            <button class="btn" onclick="clicked('*')" type="button">x</button>
         </div>
         <div class="row 3">
-            <button type="button">1</button>
-            <button type="button">2</button>
-            <button type="button">3</button>
-            <button type="button">-</button>
+            <button class="btn" onclick="clicked(1)" type="button">1</button>
+            <button class="btn" onclick="clicked(2)" type="button">2</button>
+            <button class="btn" onclick="clicked(3)" type="button">3</button>
+            <button class="btn" onclick="clicked('-')" type="button">-</button>
         </div>
         <div class="row 4">
-            <button type="button">0</button>
-            <button type="button">.</button>
-            <button type="button">=</button>
-            <button type="button">+</button>
+            <button class="btn-double" onclick="clicked(0)" type="button">0</button>
+            <button class="btn" onclick="clicked('.')" type="button">.</button>
+            <button class="btn" onclick="clicked('+')" type="button">+</button>
         </div>
     </div>
     <script type="text/javascript" src="script.js" defer></script>
