add basic functions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="visor"><p></p></div>
         <div class="row 0">
             <button class="btn-double c" onclick="limpa()" type="button">c</button>
-            <button class="btn" onclick="clicked()" type="button"><</button>
+            <button class="btn" onclick="apaga()" type="button"><</button>
             <button class="btn" onclick="resultado()" type="button">=</button>
         </div>
         <div class="row 1">
